--- a/templates/dashboard/common_retail_js.html
+++ b/templates/dashboard/common_retail_js.html
@@ -42,5 +42,6 @@
 <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-database-compat.js"></script>
 
 <script src="{% static 'assets/js/dashboard/firebase_cred.js' %}"></script>
+<script src="{% static 'assets/js/dashboard/broker_functions.js' %}"></script>
 
 {% endblock %}
