--- a/templates/dashboard/create_analysis.html
+++ b/templates/dashboard/create_analysis.html
@@ -126,6 +126,17 @@
                                 </div>
                             </div>
 
+                            <div class="col-sm-6 col-md-4" id="strike-side-wrapper">
+                                <div class="form-floating">
+                                    <!-- <select name="trade_date_time" class="form-select" id="floatingSelectPrivacy">
+                                        <option value="{{today}}">Today</option>
+                                        <option value="">Tomorrow</option>
+                                    </select> -->
+                                    <input type="date" class="form-control" name="trade_date_time">
+                                    <label for="floatingSelectPrivacy">Trade Date</label>
+                                </div>
+                            </div>
+
                             <div class="col-12 gy-6">
                                 <div class="row g-3 justify-content-end">
                                     <div class="col-md-6">
