--- a/templates/dashboard/funds.html
+++ b/templates/dashboard/funds.html
@@ -67,7 +67,7 @@
                                 <h5 class="card-title mb-4">Balance Available <i class="fa fa-money-bill"></i></h5>
                                 <!-- <img src="{% static 'assets/img/funds.png' %}" class="funds-img" alt=""> -->
                                 <div class="d-flex">
-                                    <h3 class="mb-0">₹</h3>
+                                    <!-- <h3 class="mb-0">₹</h3> -->
                                     <h3 class="mb-0 text-secondary funds-amount px-1">0.00</h3>
                                 </div>
                             </div>
@@ -75,16 +75,16 @@
 
                         <div class="balance-table">
                             <div class="balance-item my-3 mx-2">
-                                <div class="balance-text">Demat Account Balance</div>
-                                <div class="balance-amount fw-bold">₹ 0.00</div>
+                                <div class="balance-text">Demat Total Balance</div>
+                                <div class="balance-amount fw-bold demat-balance">₹ 0.00</div>
                             </div>
                             <div class="balance-item my-3 mx-2">
-                                <div class="balance-text">Used for Stock, F&O</div>
-                                <div class="balance-amount fw-bold">₹ 0.00</div>
+                                <div class="balance-text">Realized Profit & Loss</div>
+                                <div class="balance-amount fw-bold real-profit-loss">₹ 0.00</div>
                             </div>
                             <div class="balance-item my-3 mx-2">
-                                <div class="balance-text">Balance Available</div>
-                                <div class="balance-amount fw-bold">₹ 0.00</div>
+                                <div class="balance-text">Clear Balance</div>
+                                <div class="balance-amount fw-bold clear-balance">₹ 0.00</div>
                             </div>
                         </div>
                     </div>
@@ -102,7 +102,7 @@
                                     <div>Enter Amount</div>
                                     <div><input class="form-control"
                                             style="background: #E5FAF5; color: #00D09C; font-weight: 700; width: 100px;"
-                                            type="number" name="" id="" value="100"></div>
+                                            type="number" name="" id="" value=""></div>
                                 </div>
                                 <div class="d-flex fixed-amount-wrapper mt-3">
                                     <div style="margin-left: auto;" class="d-flex">
