option premium calculator

--- a/templates/dashboard/common_js.html
+++ b/templates/dashboard/common_js.html
@@ -27,7 +27,7 @@
   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyARdVcREeBK44lIWnv5-iPijKqvlSAVwbw&amp;callback=revenueMapInit"
   async></script>
 <script src="{% static 'assets/js/ecommerce-dashboard.js' %}"></script>
-/** my added scripts **/
+<!-- my added scripts -->
 <script src="https://code.jquery.com/jquery-3.6.3.js" integrity="sha256-nQLuAZGRRcILA+6dMBOvcRh5Pe310sBpanc6+QBmyVM="
   crossorigin="anonymous"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
