--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -24,7 +24,7 @@
       align-items: center;
     }
 
-    .brokers-btn > img{
+    .brokers-btn>img {
       width: 50px;
       height: 50px;
     }
@@ -49,9 +49,9 @@
                   <h3 class="text-1000">Sign In</h3>
                   <p class="text-700">Get access to your account</p>
                 </div>
-                <button class="btn btn-phoenix-secondary w-100 mb-3">
+                <!-- <button class="btn btn-phoenix-secondary w-100 mb-3">
                   <span class="fab fa-google text-danger me-2 fs--1"></span>Sign in with google
-                </button>
+                </button> -->
 
                 <div class="row g-3">
                   {% for broker in cv.brokers %}
