--- a/templates/dashboard/create_analysis.html
+++ b/templates/dashboard/create_analysis.html
@@ -219,7 +219,7 @@
     <!--    End of Main Content-->
     <!-- ===============================================-->
 
-    {% include 'dashboard/common_js.html' %}
+    {% include 'dashboard/common_js_2.html' %}
     {% block common_js %}
     {% endblock %}
 
